# diabetes-detection

./: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
app1/: admin.py  models.py  serializers.py  urls.py  views.py
app1/migrations/: 0001_initial.py  0002_auto_20230525_0131.py  0003_auto_20230526_0104.py  0004_alter_diabetesdetection_id_and_more.py  0005_rename_age_diabetesdetection_age_and_more.py  0006_rename_age_diabetesdetection_ageee_and_more.py  0007_rename_ageee_diabetesdetection_age.py  0008_rename_age_diabetesdetection_age43.py  0009_rename_age43_diabetesdetection_age.py  0010_rename_doctor_name_doctor_name_and_more.py  0011_alter_patient_doctor.py  0012_remove_patient_doctor.py  0013_diabetesdetectiondoctor_diabetesdetectionpatient_and_more.py  0014_alter_diabetesdetectiondoctor_result_and_more.py  0015_alter_diabetesdetectiondoctor_result_and_more.py  0016_diabetesdetectiondoctor_date_and_more.py  0017_diabetesdetectiondoctor_height_and_more.py  0018_diabetesdetectionpatient_height_and_more.py  0019_diabetesdetectiondoctor_type_and_more.py  0020_alter_diabetesdetectiondoctor_date_and_more.py  0021_alter_diabetesdetectiondoctor_date_and_more.py  0022_gestationaldiabetesdoctor_weight_and_more.py  0023_alter_diabetesdetectiondoctor_result_and_more.py  0024_retinopathydetectionpatient_and_more.py
authentication/: serializers.py  urls.py  views.py
pro/: asgi.py  settings.py  urls.py  wsgi.py
userprofile/: apps.py  serializers.py  urls.py  views.py
userprofile/migrations/: 0001_initial.py  0002_auto_20230523_2005.py
